--- a/TapeHubDemo/TapeHubDemo.csproj
+++ b/TapeHubDemo/TapeHubDemo.csproj
@@ -69,6 +69,9 @@
 	  <MauiXaml Update="View\AddBranchPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
+	  <MauiXaml Update="View\EditBranchPage.xaml">
+	    <Generator>MSBuild:Compile</Generator>
+	  </MauiXaml>
 	  <MauiXaml Update="View\LoginPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
